tests/baselines/reference/exportAssignClassAndModule.errors.txt
exportAssignClassAndModule_0.ts(4,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== exportAssignClassAndModule_1.ts (0 errors) ====
    ///<reference path='exportAssignClassAndModule_0.ts'/>
    import Foo = require('./exportAssignClassAndModule_0');
    
    var z: Foo.Bar;
    var zz: Foo;
    zz.x;
==== exportAssignClassAndModule_0.ts (1 errors) ====
    class Foo {
        x: Foo.Bar;
    }
    module Foo {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface Bar {
        }
    }
    export = Foo;
    